--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "radix-vue": "^1.9.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
