--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-icons/vue": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.403.0",
+    "marked": "^13.0.2",
     "radix-vue": "^1.9.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
