--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.10.0",
     "lucide-vue-next": "^0.403.0",
+    "markdown-it": "^14.1.0",
     "marked": "^13.0.2",
     "radix-vue": "^1.9.0",
     "tailwind-merge": "^2.4.0",
@@ -23,6 +25,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.1",
     "@types/node": "^20.14.10",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
